snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/maven-metadata.xml.sha256
2328b53ebde57c633fbbfeba582cdeb5c98be854d48c551a24b97b0c7c2ecd4e